# broombuster

./: .dockerignore  .gitignore  Caddyfile.example  Dockerfile  README.md  deploy.sh  pyproject.toml  run.sh  wrangler.jsonc
data/: README.md  app.sqlite  sources.yaml
data/chicago/: StreetSweepingZones.fgb
data/manifests/: alameda.yaml  berkeley.yaml  chicago_all.yaml  oakland.yaml  regions.yaml  san_francisco.yaml
deploy/: README.md  broombuster.service  install-service.sh  sync-data.sh  update.sh
documentation/: feature_plan.md  performance_plan.md
frontend/: index.html  styles.css  sw.js
frontend/js/: app.js  urgency.js
frontend/tiles/: chicago.pmtiles  (+1 more)
scripts/: build_alameda_geojson.py  build_berkeley_geojson.py  build_pmtiles.py  rebuild_city_data.py
tests/: _urgency_harness.js  conftest.py  test_analysis.py  test_api_check_display.py  test_auth.py  test_car_panel_consistency.py  test_card_street_match.py  test_chicago_and_lazy_loading.py  test_data_loader.py  test_display_consistency.py  test_domain_registry.py  test_domain_trash.py  test_frontend_address_consistency.py  test_full_region_sync_load.py  test_hover_vs_card_consistency.py  test_manifest_parity.py  test_map_vs_carbox_consistency.py  test_normalize.py  test_package_layout.py  test_performance.py  test_pipeline.py  test_pmtiles_build.py  test_prefs_homes.py  test_recollect.py  test_region_selection_sequence.py  test_region_switch.py  test_repo_layout.py  test_resolve.py  test_streets_exhaustive.py  test_tile_union.py  test_urgency_parity.py  test_zone_detail.py  test_zoom_and_flicker.py
(+26 files in other folders)
