[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broombuster"
version = "0.1.0"
description = "Street-sweeping schedule alerts."
requires-python = ">=3.12"
dependencies = [
    "geopandas",
    "shapely",
    "pyproj",
    "geopy",
    "requests",
    "numpy",
    "python-dotenv",
    "PyYAML",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
    "PyJWT",
    "cryptography",
    "bcrypt",
    "slowapi",
    "httpx",
]
scripts = [
    "pdfplumber",
]
dev = [
    "pytest",
    "ruff",
    "pytest-httpserver",
]

# Layout: a single importable package under src/broombuster/. setuptools'
# packages.find auto-discovers every sub-package (api, cli, domains, …).
# Adding new code anywhere under src/broombuster/ requires no pyproject
# change — drop a file in, run `pip install -e .`, and import it as
# `broombuster.<path>`.
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["broombuster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `pip install -e .` puts `src/` on the import path via the editable
# install's finder, so `import broombuster` works without any further
# pythonpath config.
addopts = "-ra --strict-markers"
